--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASS }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -27,7 +27,7 @@ jobs:
           tags: ichinichi/cower:latest
 
   update_server:
-      name: Updating prod environment
+      name: Updating dev environment
       runs-on: ubuntu-latest
       needs: build
       steps:
