--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -12,17 +12,18 @@ jobs:
 
       - name: Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
         
       - name: DockerHub login
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
+          context: ./app/backend/Cower
           push: true
           tags: ichinichi/cower:latest
 
