--- a/app/backend/Cower/Dockerfile
+++ b/app/backend/Cower/Dockerfile
@@ -1,13 +1,13 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
-WORKDIR /app
+WORKDIR /app/backend
 EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["backend/Cower/Cower.csproj", "Cower/"]
+COPY ["/app/backend/Cower/Cower.csproj", "Cower/"]
 RUN dotnet restore "Cower/Cower.csproj"
 COPY . .
 WORKDIR "/src/Cower"
@@ -18,6 +18,6 @@ ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "Cower.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
-WORKDIR /app
+WORKDIR /app/backend
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Cower.dll"]
