--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Test
       run: dotnet test ./app/backend --no-build --verbosity normal
   build:
-    name: Building image
+    name: Building project
     runs-on: ubuntu-latest
     needs: test
     steps:
