--- a/app/backend/Cower/Dockerfile
+++ b/app/backend/Cower/Dockerfile
@@ -2,7 +2,6 @@
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
@@ -20,4 +19,5 @@ RUN dotnet publish "Cower.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:Use
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY certificate.pfx .
 ENTRYPOINT ["dotnet", "Cower.dll"]
