--- a/.github/workflows/deploy_backend_to_qa.yaml
+++ b/.github/workflows/deploy_backend_to_qa.yaml
@@ -1,6 +1,6 @@
 name: Deploy backend
 
-on: workflow_dispatch
+on: [workflow_dispatch, push]
 
 jobs:
   build:
@@ -30,17 +30,20 @@ jobs:
   update_server:
       name: Updating dev environment
       runs-on: ubuntu-latest
+      environment: 
+        name: QA
+        url: https://${{ vars.SERVER_HOSTNAME }}:${{ vars.APP_PORT }}
       needs: build
       steps:
         - name: Replacing container
           uses: appleboy/ssh-action@master
           with:
-            host: ${{ secrets.SERVER_HOSTNAME }}
+            host: ${{ vars.SERVER_HOSTNAME }}
             username: ${{ secrets.SERVER_USERNAME }}
             password: ${{ secrets.SERVER_PASSWORD }}
             script: |
               docker image pull ichinichi/cower
               docker container stop cower
               docker container prune -f
-              docker run -d --name cower  --restart unless-stopped -e ASPNETCORE_ENVIRONMENT='Development' -p 8080:8080 ichinichi/cower
+              docker run -d --name cower --restart unless-stopped -e ASPNETCORE_ENVIRONMENT='Development' -e CERTIFICATE_PASSWORD='${{ secrets.CERTIFICATE_PASSWORD }}' -p ${{ vars.APP_PORT }}:8080 ichinichi/cower
               docker image prune -f
