--- a/.github/workflows/deploy_backend_to_qa.yaml
+++ b/.github/workflows/deploy_backend_to_qa.yaml
@@ -1,6 +1,6 @@
-name: Deploy backend
+name: Deploy backend to QA
 
-on: [workflow_dispatch, push]
+on: workflow_dispatch
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
           tags: ichinichi/cower:latest
 
   update_server:
-      name: Updating dev environment
+      name: Updating QA environment
       runs-on: ubuntu-latest
       environment: 
         name: QA
