--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -2,11 +2,11 @@ name: .NET
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "develop" ]
     paths:
       - app/backend/**
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "develop" ]
     paths:
       - app/backend/**
 
