COWER-28: Add SSL (#2)
* Add SSL

* Update workflow

* Add develop branch to workflow

--- a/.github/workflows/deploy_backend_to_qa.yaml
+++ b/.github/workflows/deploy_backend_to_qa.yaml
@@ -1,4 +1,4 @@
-name: Deploy backend
+name: Deploy backend to QA
 
 on: workflow_dispatch
 
@@ -28,19 +28,22 @@ jobs:
           tags: ichinichi/cower:latest
 
   update_server:
-      name: Updating dev environment
+      name: Updating QA environment
       runs-on: ubuntu-latest
+      environment: 
+        name: QA
+        url: https://${{ vars.SERVER_HOSTNAME }}:${{ vars.APP_PORT }}
       needs: build
       steps:
         - name: Replacing container
           uses: appleboy/ssh-action@master
           with:
-            host: ${{ secrets.SERVER_HOSTNAME }}
+            host: ${{ vars.SERVER_HOSTNAME }}
             username: ${{ secrets.SERVER_USERNAME }}
             password: ${{ secrets.SERVER_PASSWORD }}
             script: |
               docker image pull ichinichi/cower
               docker container stop cower
               docker container prune -f
-              docker run -d --name cower  --restart unless-stopped -e ASPNETCORE_ENVIRONMENT='Development' -p 8080:8080 ichinichi/cower
+              docker run -d --name cower --restart unless-stopped -e ASPNETCORE_ENVIRONMENT='Development' -e CERTIFICATE_PASSWORD='${{ secrets.CERTIFICATE_PASSWORD }}' -p ${{ vars.APP_PORT }}:8080 ichinichi/cower
               docker image prune -f
