--- a/.github/workflows/deploy_backend_to_qa.yaml
+++ b/.github/workflows/deploy_backend_to_qa.yaml
@@ -1,6 +1,14 @@
 name: Deploy backend to QA
 
-on: pull_request
+on:
+  push:
+    branches: [ "master", "develop" ]
+    paths:
+      - app/backend/**
+  pull_request:
+    branches: [ "master", "develop" ]
+    paths:
+      - app/backend/**
 
 jobs:
   build:
