--- a/.github/workflows/deploy_backend_to_qa.yaml
+++ b/.github/workflows/deploy_backend_to_qa.yaml
@@ -1,14 +1,6 @@
 name: Deploy backend to QA
 
-on:
-  push:
-    branches: [ "master", "develop" ]
-    paths:
-      - app/backend/**
-  pull_request:
-    branches: [ "master", "develop" ]
-    paths:
-      - app/backend/**
+on: [workflow_dispatch, push]
 
 jobs:
   build:
