--- a/.github/workflows/deploy_to_qa.yaml
+++ b/.github/workflows/deploy_to_qa.yaml
@@ -1,10 +1,10 @@
-name: Deploy backend to QA
+name: Deploy to QA
 
 on: [workflow_dispatch]
 
 jobs:
   build:
-    name: Building image
+    name: Building images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,19 +20,26 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
-      - name: Build and push
+      - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           context: ./app/backend/Cower
           push: true
-          tags: ichinichi/cower:latest
+          tags: ichinichi/cower_backend:latest
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./app/frontend
+          push: true
+          tags: ichinichi/cower_frontend:latest
 
   update_server:
       name: Updating QA environment
       runs-on: ubuntu-latest
       environment: 
         name: QA
-        url: https://${{ vars.SERVER_HOSTNAME }}:${{ vars.APP_PORT }}
+        url: https://${{ vars.SERVER_HOSTNAME }}:${{ vars.FRONTEND_PORT }}
       needs: build
       steps:
         - name: Replacing DB container
@@ -61,16 +68,33 @@ jobs:
             username: ${{ secrets.SERVER_USERNAME }}
             password: ${{ secrets.SERVER_PASSWORD }}
             script: |
-              docker image pull ichinichi/cower
-              docker container stop cower
+              docker image pull ichinichi/cower_backend
+              docker container stop cower_backend
               docker container prune -f
               docker run -d \
-              --name cower \
+              --name cower_backend \
               --restart unless-stopped \
               -e ASPNETCORE_ENVIRONMENT='Development' \
               -e CERTIFICATE_PASSWORD='${{ secrets.CERTIFICATE_PASSWORD }}' \
               -e JWT_KEY='${{ secrets.JWT_KEY }}' \
               -e DB_CONNECTION_STRING='${{ secrets.DB_CONNECTION_STRING }}' \
-              -p ${{ vars.APP_PORT }}:8080 \
-              ichinichi/cower
+              -p ${{ vars.BACKEND_PORT }}:8080 \
+              ichinichi/cower_backend
+              docker image prune -f
+        - name: Replacing frontend container
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ vars.SERVER_HOSTNAME }}
+            username: ${{ secrets.SERVER_USERNAME }}
+            password: ${{ secrets.SERVER_PASSWORD }}
+            script: |
+              docker image pull ichinichi/cower_frontend
+              docker container stop cower_frontend
+              docker container prune -f
+              docker run -d \
+              --name cower_frontend \
+              --restart unless-stopped \
+              -p ${{ vars.FRONTEND_PORT }}:80 \
+              -v /etc/ssl/cower:/etc/ssl/cower \
+              ichinichi/cower_frontend
               docker image prune -f
