--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-yandex-metrika": "^2.6.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8"
   },
