--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -6,15 +6,14 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Cower.csproj", "Cower/"]
-RUN dotnet restore "Cower/Cower.csproj"
+COPY . Cower/
+RUN dotnet restore "Cower/Cower.sln"
 WORKDIR "/src/Cower"
-COPY . .
-RUN dotnet build "Cower.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "Cower.sln" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Cower.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Cower.sln" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
