Fix frontend deploy

--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -6,6 +6,8 @@ jobs:
   build:
     name: Building images
     runs-on: ubuntu-latest
+    environment: 
+        name: Production
     steps:
       - name: Checkout
         uses: actions/checkout@v2
