--- a/.github/workflows/deploy_to_qa.yaml
+++ b/.github/workflows/deploy_to_qa.yaml
@@ -6,6 +6,8 @@ jobs:
   build:
     name: Building images
     runs-on: ubuntu-latest
+    environment: 
+        name: QA
     steps:
       - name: Checkout
         uses: actions/checkout@v2
