--- a/.github/workflows/deploy_to_qa.yaml
+++ b/.github/workflows/deploy_to_qa.yaml
@@ -96,6 +96,7 @@ jobs:
               docker run -d \
               --name cower_frontend_qa \
               --restart unless-stopped \
+              -e BACKEND_ADDRESS='https://${{ vars.SERVER_HOSTNAME }}:${{ vars.BACKEND_PORT }}/api' \
               -p ${{ vars.FRONTEND_PORT }}:80 \
               -v /etc/ssl/cower:/etc/ssl/cower \
               ichinichi/cower_frontend
