--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -36,9 +36,9 @@ RUN { \
 } | tee -a /usr/local/apache2/conf/httpd.conf
 
 RUN { \
-    echo '#!/bin/sh'  \
-    echo 'sed -i "s|https://replace_me_in_container|$BACKEND_ADDRESS|g" /usr/local/apache2/htdocs/*' \
-    echo 'httpd-foreground' >> /usr/local/apache2/start \
+    echo '#!/bin/sh';  \
+    echo 'sed -i "s|https://replace_me_in_container|$BACKEND_ADDRESS|g" /usr/local/apache2/htdocs/*'; \
+    echo 'httpd-foreground'; \
 } > /usr/local/apache2/start
 RUN chmod +x /usr/local/apache2/start
 
