--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -6,8 +6,6 @@ jobs:
   build:
     name: Building images
     runs-on: ubuntu-latest
-    environment: 
-        name: Production
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +34,7 @@ jobs:
           push: true
           tags: ichinichi/cower_frontend:latest
           build-args: |
-            BACKEND_ADDRESS=https://${{ vars.SERVER_HOSTNAME }}:${{ vars.BACKEND_PORT }}/api
+            BACKEND_ADDRESS=https://replace_me_in_container
 
   update_server:
       name: Updating Production environment
@@ -98,6 +96,7 @@ jobs:
               docker run -d \
               --name cower_frontend_prod \
               --restart unless-stopped \
+              -e BACKEND_ADDRESS='https://${{ vars.SERVER_HOSTNAME }}:${{ vars.BACKEND_PORT }}/api' \
               -p ${{ vars.FRONTEND_PORT }}:80 \
               -v /etc/ssl/cower:/etc/ssl/cower \
               ichinichi/cower_frontend
