--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -4,7 +4,7 @@ on: [workflow_dispatch]
 
 jobs:
   build_and_push:
-    uses: ./.github/workflows/build_and_push.yml
+    uses: .github/workflows/build_and_push.yml
     with:
       docker_username: ${{ secrets.DOCKERHUB_USERNAME }}
       docker_password: ${{ secrets.DOCKERHUB_PASSWORD }}
