--- a/.github/workflows/deploy_to_qa.yaml
+++ b/.github/workflows/deploy_to_qa.yaml
@@ -4,7 +4,7 @@ on: [workflow_dispatch, push]
 
 jobs:
   build_and_push:
-    uses: ./.github/workflows/build_and_push.yml
+    uses: ./.github/workflows/build_and_push.yaml
     with:
       docker_username: ${{ secrets.DOCKERHUB_USERNAME }}
       docker_password: ${{ secrets.DOCKERHUB_PASSWORD }}
