--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -2,7 +2,7 @@ name: Build and push Docker images
 
 on:
   workflow_call:
-    inputs:
+    secrets:
       docker_username:
         required: true
         type: string
@@ -23,8 +23,8 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{ inputs.docker_username }}
-        password: ${{ inputs.docker_password }}
+        username: ${{ secrets.docker_username }}
+        password: ${{ secrets.docker_password }}
 
     - name: Build and push backend image
       uses: docker/build-push-action@v5
