--- a/.github/workflows/deploy_to_qa.yaml
+++ b/.github/workflows/deploy_to_qa.yaml
@@ -30,6 +30,7 @@ jobs:
               docker container prune -f
               docker run -d \
               --name db_qa \
+              --restart unless-stopped \
               -e POSTGRES_USER='${{ secrets.DB_USER }}' \
               -e POSTGRES_PASSWORD='${{ secrets.DB_PASSWORD }}' \
               -e POSTGRES_DB=cower \
