--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -56,7 +56,10 @@ jobs:
               -e JWT_KEY='${{ secrets.JWT_KEY }}' \
               -e PASSWORD_SALT='${{ secrets.PASSWORD_SALT }}' \
               -e DB_CONNECTION_STRING='${{ secrets.DB_CONNECTION_STRING }}' \
+              -e YOOMONEY_SECRET='${{ secrets.YOOMONEY_SECRET }}' \
+              -e YOOMONEY_RECEIVER='${{ secrets.YOOMONEY_RECEIVER }}' \
               -p ${{ vars.BACKEND_PORT }}:8080 \
+              -v /cower/files:/cower/files \
               ichinichi/cower_backend
               docker image prune -f
         - name: Replace frontend container
