--- a/app/backend/Cower.Data/Cower.Data.csproj
+++ b/app/backend/Cower.Data/Cower.Data.csproj
@@ -20,4 +20,8 @@
       <Folder Include="Migrations\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Cower.Domain\Cower.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
