--- a/app/backend/Cower.Web/appsettings.Development.json
+++ b/app/backend/Cower.Web/appsettings.Development.json
@@ -2,7 +2,29 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+    },
+    "LogFilePath": "/cower/files/log.txt"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/cower/files/log.txt"
+        }
+      }
+    ]
+  },
+  "AllowedHosts": "*"
 }
