--- a/app/backend/Cower.Web/appsettings.json
+++ b/app/backend/Cower.Web/appsettings.json
@@ -4,7 +4,27 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
-    }
+    },
+    "LogFilePath": "/cower/files/log.txt"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/cower/files/log.txt"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
