--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -58,6 +58,7 @@ jobs:
               -e DB_CONNECTION_STRING='${{ secrets.DB_CONNECTION_STRING }}' \
               -e YOOMONEY_SECRET='${{ secrets.YOOMONEY_SECRET }}' \
               -e YOOMONEY_RECEIVER='${{ secrets.YOOMONEY_RECEIVER }}' \
+              -e YOOMONEY_SUCCESS_URL='https://${{ vars.SERVER_HOSTNAME }}:${{ vars.FRONTEND_PORT }}${{ vars.YOOMONEY_SUCCESS_PATH }}' \
               -p ${{ vars.BACKEND_PORT }}:8080 \
               -v /cower/files:/cower/files \
               ichinichi/cower_backend
