--- a/app/frontend/.eslintrc.json
+++ b/app/frontend/.eslintrc.json
@@ -142,14 +142,14 @@
       "error",
       "always"
     ],
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "never",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ],
+//    "space-before-function-paren": [
+//      "error",
+//      {
+//        "anonymous": "never",
+//        "named": "never",
+//        "asyncArrow": "always"
+//      }
+//    ],
     "space-in-parens": [
       "error",
       "never"
