--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
@@ -24,7 +25,7 @@
     "react-router-dom": "^6.22.3",
     "react-yandex-metrika": "^2.6.0",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
