--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -27,15 +27,13 @@ RUN rm -rf /usr/local/apache2/htdocs
 COPY --from=build /app/dist /usr/local/apache2/htdocs
 
 # Use ssl
-RUN { \
-    echo 'if [ -f /cower/ssl/certificate.crt ]; then'; \
-    echo '  echo "LoadModule ssl_module modules/mod_ssl.so" >> /usr/local/apache2/conf/httpd.conf'; \
-    echo '  echo "SSLEngine on" >> /usr/local/apache2/conf/httpd.conf'; \
-    echo '  echo "SSLCertificateFile /cower/ssl/certificate.crt" >> /usr/local/apache2/conf/httpd.conf'; \
-    echo '  echo "SSLCertificateKeyFile /cower/ssl/private.key" >> /usr/local/apache2/conf/httpd.conf'; \
-    echo '  echo "SSLCertificateChainFile /cower/ssl/ca_bundle.crt" >> /usr/local/apache2/conf/httpd.conf'; \
-    echo 'fi'; \
-}
+RUN if [ -f /cower/ssl/certificate.crt ]; then \
+        echo "LoadModule               ssl_module modules/mod_ssl.so" >> /usr/local/apache2/conf/httpd.conf; \
+        echo "SSLEngine                on" >> /usr/local/apache2/conf/httpd.conf; \
+        echo "SSLCertificateFile       /cower/ssl/certificate.crt" >> /usr/local/apache2/conf/httpd.conf; \
+        echo "SSLCertificateKeyFile    /cower/ssl/private.key" >> /usr/local/apache2/conf/httpd.conf; \
+        echo "SSLCertificateChainFile  /cower/ssl/ca_bundle.crt" >> /usr/local/apache2/conf/httpd.conf; \
+    fi
 
 RUN { \
     echo '#!/bin/sh';  \
