Add local docker compose

--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -27,16 +27,15 @@ RUN rm -rf /usr/local/apache2/htdocs
 COPY --from=build /app/dist /usr/local/apache2/htdocs
 
 # Use ssl
-RUN if [ -f /cower/ssl/certificate.crt ]; then \
-        echo "LoadModule               ssl_module modules/mod_ssl.so" >> /usr/local/apache2/conf/httpd.conf; \
-        echo "SSLEngine                on" >> /usr/local/apache2/conf/httpd.conf; \
-        echo "SSLCertificateFile       /cower/ssl/certificate.crt" >> /usr/local/apache2/conf/httpd.conf; \
-        echo "SSLCertificateKeyFile    /cower/ssl/private.key" >> /usr/local/apache2/conf/httpd.conf; \
-        echo "SSLCertificateChainFile  /cower/ssl/ca_bundle.crt" >> /usr/local/apache2/conf/httpd.conf; \
-    fi
-
 RUN { \
     echo '#!/bin/sh';  \
+    echo 'if [ -f /cower/ssl/certificate.crt ]; then'; \
+    echo '  echo "LoadModule ssl_module modules/mod_ssl.so" >> /usr/local/apache2/conf/httpd.conf'; \
+    echo '  echo "SSLEngine on" >> /usr/local/apache2/conf/httpd.conf'; \
+    echo '  echo "SSLCertificateFile /cower/ssl/certificate.crt" >> /usr/local/apache2/conf/httpd.conf'; \
+    echo '  echo "SSLCertificateKeyFile /cower/ssl/private.key" >> /usr/local/apache2/conf/httpd.conf'; \
+    echo '  echo "SSLCertificateChainFile /cower/ssl/ca_bundle.crt" >> /usr/local/apache2/conf/httpd.conf'; \
+    echo 'fi'; \
     echo 'grep -rl https://replace_me_in_container /usr/local/apache2/htdocs/ | xargs sed -i "s|https://replace_me_in_container|$BACKEND_ADDRESS|g"'; \
     echo 'httpd-foreground'; \
 } > /usr/local/apache2/start
